--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "server",
+  "name": "messenger-server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "socket.io": "^4.7.5",
     "jsonwebtoken": "^9.0.2",
-    "socket.io": "^4.8.1"
+    "bcryptjs": "^2.4.3",
+    "lowdb": "^6.0.1"
   }
 }
